import { Entity } from "../../types/entity";

export interface User extends Entity {
  name: string;
}
