@startuml

class Plan
class User
class Profile

PlanStore o--> Plan : aggregation

Owner --|> User
Plan *--> "1" Owner
Plan *--> "1" Location
Plan *--> "1" Time
Plan *--> "1" Chat
Plan *--> "1" Privacy
Plan *--> "1" Title
Plan *--> "1" Category
Plan *--> Atendees

Atendees o--> User
Chat o--> User
User *--> Profile
Profile o--> "1" PlanStore


@enduml